# advent-of-code-2025

./: .gitignore  README  build.zig  mise.toml
.zed/: settings.json
day01-02/: .gitignore
day01-02/src/: puzzle.zig
day03/: .gitignore  day3.exs
day04/: gleam.toml  manifest.toml
day04/src/: day4.gleam  puzzle.gleam
day05/: .gitignore  Puzzle.roc  README  main.roc
day07/: .gitignore  day07.cabal
day07/app/: Main.hs
src/: main.zig  root.zig
src/days/: 1.zig  2.zig
