cabal-version:      3.0
name:               day07
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day07
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0,
                      bytestring ^>=0.12.2.0,
                      containers ^>=0.7,
                      http-conduit ^>=2.3.9.1
    hs-source-dirs:   app
    default-language: GHC2021
